# databricks-sql-server-ingest

./: .env.example  .gitignore  README.md  grant-change-tracking-database_1.sql  output.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run_setup_and_test.sh  sync_config.json
azsql_ct/: README.md  __init__.py  __main__.py  _constants.py  client.py  config.py  connection.py  incremental_output.py  output_manifest.py  queries.py  schema.py  sync.py  sync_log.py  watermark.py  writer.py
dab/: README.md  databricks.yml  generate_jobs.py
docs/: architecture.mmd  mermaid-config.json
example_pipelines/: README.md  example_pipeline.yaml  example_pipeline_1.yaml  pipeline_1.yaml
examples/: connect.py  full_sync.py  output.yaml  parse_output.py  sync.py  tables.yaml
helper_notebooks/: Databricks Secret Setup.ipynb  Logging Setup.ipynb  Repair Table Generator.ipynb  Unified Data Model.ipynb
ingestion_pipeline/: README.md  ingestion_pipeline_materialized.py
ingestion_pipeline_examples/: README.md  __init__.py  ingestion_pipeline.py  ingestion_pipeline_consolidated.py  ingestion_pipeline_materialized.py  metadata_helper.py
lakeflow_pipeline/: README.md  _uoid.py  ingestion_pipeline_materialized.py  metadata_helper.py
scripts/: README.md  connect.py  parse_output.py  sync.py
tests/: README.md  conftest.py  test_build_spark_schema.py  test_change_tracker.py  test_cli.py  test_client.py  test_client_skip_logic.py  test_config.py  test_connection.py  test_dispatch_parameterized.py  test_from_config.py  test_generate_jobs.py  test_incremental_output.py  (+15 more)
(+7 files in other folders)
