[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azsql_ct"
version = "0.1.0"
description = "Incremental Azure SQL change-tracking sync to CSV"
requires-python = ">=3.8"
dependencies = [
    "pyodbc>=4.0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
azsql-ct = "azsql_ct.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a live Azure SQL database (deselect with '-m not integration')",
]
addopts = "-m 'not integration'"
